--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.16",
     "@reduxjs/toolkit": "^1.9.7",
+    "async-mutex": "^0.4.0",
     "axios": "^1.5.1",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
